force-app/main/default/objects/Account/fields/ActiveMonitoring__c.field-meta.xml
<CustomField>
    <fullName>ActiveMonitoring__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Negli Account di tipo PartnerCommunity, indica se l&apos;Agenzia rientra in blackList e quindi soggetta a monitoraggio</description>
    <label>Monitoraggio attivo</label>
    <type>Checkbox</type>
</CustomField>