force-app/main/default/objects/Account/fields/ActiveServices__c.field-meta.xml
<CustomField>
    <fullName>ActiveServices__c</fullName>
    <description>KPI Servizi attivi</description>
    <formula>IF(ActiveServicesEle__c &gt; 0, IMAGE(IF($User.UITheme=&apos;Theme3&apos;, &apos;/sfsites/c&apos;, &apos;&apos;) &amp; $CustomMetadata.HDT_ImageURL__mdt.Service1.URL__c, $CustomMetadata.HDT_ImageURL__mdt.Service1.AlternateText__c, 30, 30), &apos;&apos;)
&amp;
IF(ActiveServicesGas__c &gt; 0, IMAGE(IF($User.UITheme=&apos;Theme3&apos;, &apos;/sfsites/c&apos;, &apos;&apos;) &amp; $CustomMetadata.HDT_ImageURL__mdt.Service2.URL__c, $CustomMetadata.HDT_ImageURL__mdt.Service2.AlternateText__c, 30, 30), &apos;&apos;)
&amp;
IF(ActiveServicesWater__c &gt; 0, IMAGE(IF($User.UITheme=&apos;Theme3&apos;, &apos;/sfsites/c&apos;, &apos;&apos;) &amp; $CustomMetadata.HDT_ImageURL__mdt.Service3.URL__c, $CustomMetadata.HDT_ImageURL__mdt.Service3.AlternateText__c, 30, 30), &apos;&apos;)
&amp;
IF(ActiveServicesWaste__c &gt; 0, IMAGE(IF($User.UITheme=&apos;Theme3&apos;, &apos;/sfsites/c&apos;, &apos;&apos;) &amp; $CustomMetadata.HDT_ImageURL__mdt.Service4.URL__c, $CustomMetadata.HDT_ImageURL__mdt.Service4.AlternateText__c, 30, 30), &apos;&apos;)
&amp;
IF(ActiveServicesTLR__c &gt; 0, IMAGE(IF($User.UITheme=&apos;Theme3&apos;, &apos;/sfsites/c&apos;, &apos;&apos;) &amp; $CustomMetadata.HDT_ImageURL__mdt.Service5.URL__c, $CustomMetadata.HDT_ImageURL__mdt.Service5.AlternateText__c, 30, 30), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Servizi attivi</label>
    <type>Text</type>
</CustomField>