force-app/main/default/objects/Account/fields/ActiveServicesWaste__c.field-meta.xml
<CustomField>
    <fullName>ActiveServicesWaste__c</fullName>
    <description>Campo tecnico nascosto. Necessario per calcolo KPI Servizi attivi.</description>
    <label>Numero forniture attive Ambiente</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>