force-app/main/default/objects/Account/fields/ActiveServicesWater__c.field-meta.xml
<CustomField>
    <fullName>ActiveServicesWater__c</fullName>
    <description>Campo tecnico nascosto. Necessario per calcolo KPI Servizi attivi.</description>
    <label>Numero forniture attive Acqua</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>