force-app/main/default/objects/Account/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>IF( NOT( ISBLANK( BirthDate__c ) ) ,
IF( DATE( 2000 , MONTH( BirthDate__c ) , DAY( BirthDate__c ) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ),
YEAR (Today()) - YEAR ( BirthDate__c ),
YEAR (Today()) - YEAR ( BirthDate__c ) -1 ),
Null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Età</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>