force-app/main/default/objects/Account/fields/BillingAddressIsForeign__c.field-meta.xml
<CustomField>
    <fullName>BillingAddressIsForeign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indirizzo Estero</label>
    <type>Checkbox</type>
</CustomField>