force-app/main/default/objects/Account/fields/BillingIsAddressVerified__c.field-meta.xml
<CustomField>
    <fullName>BillingIsAddressVerified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indirizzo Verificato [Residenziale/Sede</label>
    <type>Checkbox</type>
</CustomField>