force-app/main/default/objects/Account/fields/BillingPlace__c.field-meta.xml
<CustomField>
    <fullName>BillingPlace__c</fullName>
    <label>Località [Residenziale/Sede Legale]</label>
    <length>50</length>
    <type>Text</type>
</CustomField>