force-app/main/default/objects/Account/fields/BillingPlaceCode__c.field-meta.xml
<CustomField>
    <fullName>BillingPlaceCode__c</fullName>
    <label>Codice Località [Residenziale/Sede Legal</label>
    <length>30</length>
    <type>Text</type>
</CustomField>