force-app/main/default/objects/Account/fields/BillingRegion__c.field-meta.xml
<CustomField>
    <fullName>BillingRegion__c</fullName>
    <label>Regione[Residenziale/Sede Legale]</label>
    <length>50</length>
    <type>Text</type>
</CustomField>