force-app/main/default/objects/Account/fields/BillingStreetCode__c.field-meta.xml
<CustomField>
    <fullName>BillingStreetCode__c</fullName>
    <description>Codice via stradario SAP</description>
    <label>Codice Via Stradario SAP [Residenziale/S</label>
    <length>30</length>
    <type>Text</type>
</CustomField>