force-app/main/default/objects/Account/fields/BillingStreetName__c.field-meta.xml
<CustomField>
    <fullName>BillingStreetName__c</fullName>
    <label>Nome Via [Residenziale/Sede Legale]</label>
    <length>200</length>
    <type>Text</type>
</CustomField>