force-app/main/default/objects/Account/fields/BillingStreetNumber__c.field-meta.xml
<CustomField>
    <fullName>BillingStreetNumber__c</fullName>
    <label>Civico [Residenziale/Sede Legale]</label>
    <length>30</length>
    <type>Text</type>
</CustomField>