force-app/main/default/objects/Account/fields/BillingStreetNumberExtension__c.field-meta.xml
<CustomField>
    <fullName>BillingStreetNumberExtension__c</fullName>
    <label>Estens.Civico [Residenziale/Sede Legale]</label>
    <length>15</length>
    <type>Text</type>
</CustomField>