force-app/main/default/objects/Account/fields/BillingStreetToponym__c.field-meta.xml
<CustomField>
    <fullName>BillingStreetToponym__c</fullName>
    <description>Contiene il Toponimo dell&apos;indirizzo</description>
    <label>Toponimo [Residenziale/Sede Legale]</label>
    <length>30</length>
    <type>Text</type>
</CustomField>