force-app/main/default/objects/Account/fields/BirthDate__c.field-meta.xml
<CustomField>
    <fullName>BirthDate__c</fullName>
    <label>Data nascita</label>
    <type>Date</type>
</CustomField>