force-app/main/default/objects/Account/fields/BirthProvince__c.field-meta.xml
<CustomField>
    <fullName>BirthProvince__c</fullName>
    <label>Comune di nascita</label>
    <length>80</length>
    <type>Text</type>
</CustomField>