force-app/main/default/objects/Account/fields/BPSAPModel__c.field-meta.xml
<CustomField>
    <fullName>BPSAPModel__c</fullName>
    <description>Indica il codice BP modello su SAP</description>
    <label>BP Modello SAP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CLIENTE MODELLO DA CRM</fullName>
            </value>
            <value>
                <fullName>CLIENTI GENERICI 10%</fullName>
            </value>
            <value>
                <fullName>CLIENTI GENERICI 20%</fullName>
            </value>
            <value>
                <fullName>CLIENTI GENERICI MMS</fullName>
            </value>
            <value>
                <fullName>CLIENTI NON IMP. ART. 72</fullName>
            </value>
            <value>
                <fullName>CLIENTI NON IMP.ART. 8 E 9</fullName>
            </value>
            <value>
                <fullName>CLIENTI SOCIETA COLLEGATE 10 %</fullName>
            </value>
            <value>
                <fullName>CLIENTI SOCIETA COLLEGATE 20 %</fullName>
            </value>
            <value>
                <fullName>CLIENTI SOCIETA CONTROLLANTI10</fullName>
            </value>
            <value>
                <fullName>CLIENTI SOCIETA CONTROLLANTI20</fullName>
            </value>
            <value>
                <fullName>CLIENTI SOCIETA CONTROLLATE 10</fullName>
            </value>
            <value>
                <fullName>CLIENTI SOCIETA CONTROLLATE 20</fullName>
            </value>
            <value>
                <fullName>INRETE CLIENTE MODELLO GE</fullName>
            </value>
            <value>
                <fullName>SOCIETA DEL GRUPPO CON IVA 10%</fullName>
            </value>
            <value>
                <fullName>SOCIETA DEL GRUPPO CON IVA 20%</fullName>
            </value>
            <value>
                <fullName>Centri di assistenza</fullName>
            </value>
            <value>
                <fullName>Negozi al dettaglio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>