force-app/main/default/objects/Account/fields/BuildingFloor__c.field-meta.xml
<CustomField>
    <fullName>BuildingFloor__c</fullName>
    <label>Piano[Residenziale/Sede Legale]</label>
    <length>10</length>
    <type>Text</type>
</CustomField>