force-app/main/default/objects/Account/fields/CategoryCode__c.field-meta.xml
<CustomField>
    <fullName>CategoryCode__c</fullName>
    <description>Corrisponde al BPKind SAP</description>
    <label>Codice Categoria Cliente</label>
    <length>4</length>
    <type>Text</type>
</CustomField>