force-app/main/default/objects/Account/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>Codice univoco per ditributori, trader e Partner</description>
    <externalId>true</externalId>
    <label>Codice univoco</label>
    <length>30</length>
    <type>Text</type>
</CustomField>