force-app/main/default/objects/Account/fields/Commodity__c.field-meta.xml
<CustomField>
    <fullName>Commodity__c</fullName>
    <formula>IF(CONTAINS(Code__c, &apos;13D&apos;)&amp;&amp; (RecordType.DeveloperName==&apos;HDT_RT_Distributore&apos;),
							&apos;Ele&apos;, 
							        IF(CONTAINS(Code__c, &apos;10D&apos;)&amp;&amp; (RecordType.DeveloperName==&apos;HDT_RT_Distributore&apos;),
							        &apos;Gas&apos;,
											         &apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Servizi</label>
    <type>Text</type>
</CustomField>