force-app/main/default/objects/Account/fields/CompanyOwner__c.field-meta.xml
<CustomField>
    <fullName>CompanyOwner__c</fullName>
    <description>Identifica la company di appartenenza</description>
    <label>Company Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_CompanyOwner</valueSetName>
    </valueSet>
</CustomField>