force-app/main/default/objects/Account/fields/ComplaintRateFormula__c.field-meta.xml
<CustomField>
    <fullName>ComplaintRateFormula__c</fullName>
    <description>KPI Tasso reclamosità</description>
    <formula>IF(ComplaintRateNum__c &lt; 1,
IMAGE(IF($User.UITheme=&apos;Theme3&apos;, &apos;/sfsites/c&apos;, &apos;&apos;) &amp; $CustomMetadata.HDT_ImageURL__mdt.SmileyGreen.URL__c, $CustomMetadata.HDT_ImageURL__mdt.SmileyGreen.AlternateText__c, 30, 30),
IF(ComplaintRateNum__c &lt;= 2,
IMAGE(IF($User.UITheme=&apos;Theme3&apos;, &apos;/sfsites/c&apos;, &apos;&apos;) &amp; $CustomMetadata.HDT_ImageURL__mdt.SmileyYellow.URL__c, $CustomMetadata.HDT_ImageURL__mdt.SmileyYellow.AlternateText__c, 30, 30),
IMAGE(IF($User.UITheme=&apos;Theme3&apos;, &apos;/sfsites/c&apos;, &apos;&apos;) &amp; $CustomMetadata.HDT_ImageURL__mdt.SmileyRed.URL__c, $CustomMetadata.HDT_ImageURL__mdt.SmileyRed.AlternateText__c, 30, 30)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tasso reclamosità</label>
    <type>Text</type>
</CustomField>