force-app/main/default/objects/Account/fields/ContactReason__c.field-meta.xml
<CustomField>
    <fullName>ContactReason__c</fullName>
    <label>Motivo di Contatto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_ContactReason</valueSetName>
    </valueSet>
</CustomField>