force-app/main/default/objects/Account/fields/ConvertedDate__c.field-meta.xml
<CustomField>
    <fullName>ConvertedDate__c</fullName>
    <label>Data Conversione</label>
    <type>Date</type>
</CustomField>