force-app/main/default/objects/Account/fields/CustomerAccountStatus__c.field-meta.xml
<CustomField>
    <fullName>CustomerAccountStatus__c</fullName>
    <description>Indica lo stato di avanzamento dell&apos;Account (se Prospect o Cliente)</description>
    <label>Stato Account Cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
                <default>true</default>
                <label>Prospect</label>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Ex-Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>