force-app/main/default/objects/Account/fields/CustomerCode__c.field-meta.xml
<CustomField>
    <fullName>CustomerCode__c</fullName>
    <description>Codice Business Partner (BP) di SAP</description>
    <externalId>true</externalId>
    <label>Codice cliente</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>