force-app/main/default/objects/Account/fields/CustomerLifeCycleVAS__c.field-meta.xml
<CustomField>
    <fullName>CustomerLifeCycleVAS__c</fullName>
    <description>KPI Customer Life Cycle</description>
    <label>Customer Life Cycle VAS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_CustomerLifeCycle</valueSetName>
    </valueSet>
</CustomField>