force-app/main/default/objects/Account/fields/CustomerMarking__c.field-meta.xml
<CustomField>
    <fullName>CustomerMarking__c</fullName>
    <description>Rappresenta una segmentazione del cliente</description>
    <label>Marcatura Cliente</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CompanyOwner__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>HDT_CustomerMarking</valueSetName>
    </valueSet>
</CustomField>