force-app/main/default/objects/Account/fields/DataLimitation__c.field-meta.xml
<CustomField>
    <fullName>DataLimitation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Limitazione dati</label>
    <type>Checkbox</type>
</CustomField>