force-app/main/default/objects/Account/fields/DegreeOfStudies__c.field-meta.xml
<CustomField>
    <fullName>DegreeOfStudies__c</fullName>
    <label>Titolo di studio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Licenza elementare</fullName>
            </value>
            <value>
                <fullName>Diploma scuola media inferiore</fullName>
            </value>
            <value>
                <fullName>Diploma scuola media superiore</fullName>
            </value>
            <value>
                <fullName>Laurea</fullName>
            </value>
            <value>
                <fullName>Master</fullName>
            </value>
            <value>
                <fullName>Nessun titolo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>