force-app/main/default/objects/Account/fields/FAX__c.field-meta.xml
<CustomField>
    <fullName>FAX__c</fullName>
    <description>FAX</description>
    <label>FAX</label>
    <type>Phone</type>
</CustomField>