force-app/main/default/objects/Account/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <description>Nome del cliente B2C</description>
    <label>Nome</label>
    <length>100</length>
    <type>Text</type>
</CustomField>