force-app/main/default/objects/Account/fields/FiscalCode__c.field-meta.xml
<CustomField>
    <fullName>FiscalCode__c</fullName>
    <description>Codice Fiscale del cliente</description>
    <label>Codice Fiscale</label>
    <length>16</length>
    <type>Text</type>
</CustomField>