force-app/main/default/objects/Account/fields/FormalChannelInCharge__c.field-meta.xml
<CustomField>
    <fullName>FormalChannelInCharge__c</fullName>
    <label>Canale formale preposto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PEC</fullName>
            </value>
            <value>
                <fullName>M03</fullName>
            </value>
            <value>
                <fullName>CIG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>