force-app/main/default/objects/Account/fields/InterestArea__c.field-meta.xml
<CustomField>
    <fullName>InterestArea__c</fullName>
    <label>Area di Interesse</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_InterestArea</valueSetName>
    </valueSet>
</CustomField>