force-app/main/default/objects/Account/fields/InterestProduct__c.field-meta.xml
<CustomField>
    <fullName>InterestProduct__c</fullName>
    <label>Prodotto di interesse</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_InterestProduct</valueSetName>
    </valueSet>
</CustomField>