force-app/main/default/objects/Account/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag per indicare se il distributore o il trader è attivo e selezionbile</description>
    <label>Attivo</label>
    <type>Checkbox</type>
</CustomField>