force-app/main/default/objects/Account/fields/IsDocumentAcquired__c.field-meta.xml
<CustomField>
    <fullName>IsDocumentAcquired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag conferma Acquisizione della Carta d&apos;identità (solo clienti migrati)</description>
    <label>Documento Acquisito</label>
    <type>Checkbox</type>
</CustomField>