force-app/main/default/objects/Account/fields/IsSOL__c.field-meta.xml
<CustomField>
    <fullName>IsSOL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SOL?</label>
    <type>Checkbox</type>
</CustomField>