force-app/main/default/objects/Account/fields/IsVATGroupJoined__c.field-meta.xml
<CustomField>
    <fullName>IsVATGroupJoined__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Gestione Gruppo IVA</description>
    <label>Adesione Gruppo IVA</label>
    <type>Checkbox</type>
</CustomField>