force-app/main/default/objects/Account/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <description>Cognome del cliente B2C</description>
    <label>Cognome</label>
    <length>100</length>
    <type>Text</type>
</CustomField>