force-app/main/default/objects/Account/fields/LastNameRcuFormula__c.field-meta.xml
<CustomField>
    <fullName>LastNameRcuFormula__c</fullName>
    <formula>IF(ISNULL(FirstName__c),&apos;&apos;,LastName__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cognome RCU</label>
    <type>Text</type>
</CustomField>