force-app/main/default/objects/Account/fields/LegalFormType__c.field-meta.xml
<CustomField>
    <fullName>LegalFormType__c</fullName>
    <label>Tipo Forma Giuridica</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amministrazione Pubblica</fullName>
            </value>
            <value>
                <fullName>Consorzi di Bonifica</fullName>
            </value>
            <value>
                <fullName>Consorzi di Impresa</fullName>
            </value>
            <value>
                <fullName>Ente Morale</fullName>
            </value>
            <value>
                <fullName>Onlus</fullName>
            </value>
            <value>
                <fullName>s.a.p.a.</fullName>
            </value>
            <value>
                <fullName>s.a.s.</fullName>
            </value>
            <value>
                <fullName>s.c.</fullName>
            </value>
            <value>
                <fullName>s.c.p.a.</fullName>
            </value>
            <value>
                <fullName>s.c.r.l.</fullName>
            </value>
            <value>
                <fullName>s.n.c.</fullName>
            </value>
            <value>
                <fullName>S.p.a</fullName>
            </value>
            <value>
                <fullName>s.r.l.</fullName>
            </value>
            <value>
                <fullName>s.s.</fullName>
            </value>
            <value>
                <fullName>Società Cooperativa Agricola</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>