force-app/main/default/objects/Account/fields/MobilePhone__c.field-meta.xml
<CustomField>
    <fullName>MobilePhone__c</fullName>
    <label>Cellulare</label>
    <type>Phone</type>
</CustomField>