force-app/main/default/objects/Account/fields/OriginLeadId__c.field-meta.xml
<CustomField>
    <fullName>OriginLeadId__c</fullName>
    <label>Lead Origine</label>
    <length>18</length>
    <type>Text</type>
</CustomField>