force-app/main/default/objects/Account/fields/OtherPhone__c.field-meta.xml
<CustomField>
    <fullName>OtherPhone__c</fullName>
    <label>Altro Telefono</label>
    <type>Phone</type>
</CustomField>