force-app/main/default/objects/Account/fields/PraxidiaUpdateDate__c.field-meta.xml
<CustomField>
    <fullName>PraxidiaUpdateDate__c</fullName>
    <description>Data ultimo aggiornamento da Praxidia.</description>
    <label>Ultimo Aggiornamento Praxidia</label>
    <type>Date</type>
</CustomField>