force-app/main/default/objects/Account/fields/PrimaryEmail__c.field-meta.xml
<CustomField>
    <fullName>PrimaryEmail__c</fullName>
    <description>Valorizzare con l&apos;indirizzo Email primario del contatto primario</description>
    <label>Email primaria</label>
    <type>Email</type>
</CustomField>