force-app/main/default/objects/Account/fields/Profession__c.field-meta.xml
<CustomField>
    <fullName>Profession__c</fullName>
    <label>Professione</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_ClientProfession</valueSetName>
    </valueSet>
</CustomField>