force-app/main/default/objects/Account/fields/Published__c.field-meta.xml
<CustomField>
    <fullName>Published__c</fullName>
    <defaultValue>false</defaultValue>
    <description>indica se l&apos;Account Partner ha una coda di lavoro ad esso associato</description>
    <label>Pubblicato</label>
    <type>Checkbox</type>
</CustomField>