force-app/main/default/objects/Account/fields/Recaller__c.field-meta.xml
<CustomField>
    <fullName>Recaller__c</fullName>
    <description>Campo tecnico nascosto. Necessario per calcolo KPI Recaller.</description>
    <label>Percentuale recaller</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>