force-app/main/default/objects/Account/fields/RecallerFormula__c.field-meta.xml
<CustomField>
    <fullName>RecallerFormula__c</fullName>
    <description>KPI Recaller</description>
    <formula>IF(Recaller__c = 0,
IMAGE(IF($User.UITheme=&apos;Theme3&apos;, &apos;/sfsites/c&apos;, &apos;&apos;) &amp; $CustomMetadata.HDT_ImageURL__mdt.SmileyGreen.URL__c, $CustomMetadata.HDT_ImageURL__mdt.SmileyGreen.AlternateText__c, 30, 30),
IMAGE(IF($User.UITheme=&apos;Theme3&apos;, &apos;/sfsites/c&apos;, &apos;&apos;) &amp; $CustomMetadata.HDT_ImageURL__mdt.SmileyRed.URL__c, $CustomMetadata.HDT_ImageURL__mdt.SmileyRed.AlternateText__c, 30, 30)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recaller</label>
    <type>Text</type>
</CustomField>