force-app/main/default/objects/Account/fields/RecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeName__c</fullName>
    <description>Formaula to show account recordtype in non editable field</description>
    <formula>RecordType.Name</formula>
    <label>Tipo di record account</label>
    <type>Text</type>
</CustomField>