force-app/main/default/objects/Account/fields/RowIdSiebel__c.field-meta.xml
<CustomField>
    <fullName>RowIdSiebel__c</fullName>
    <description>Valorizzato solo per record migrati</description>
    <externalId>true</externalId>
    <label>Row Id Siebel</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>