force-app/main/default/objects/Account/fields/SalesNumber__c.field-meta.xml
<CustomField>
    <fullName>SalesNumber__c</fullName>
    <label>Numero Vendite</label>
    <summaryForeignKey>Sale__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>