force-app/main/default/objects/Account/fields/SAPIntegrationID__c.field-meta.xml
<CustomField>
    <fullName>SAPIntegrationID__c</fullName>
    <description>Campo chiave di match tra Sap e Siebel per agganciare al primo ritorno da Sap il cliente ancora prospect in Siebel</description>
    <label>Identificativo Integrazione SAP</label>
    <length>30</length>
    <type>Text</type>
</CustomField>