force-app/main/default/objects/Account/fields/SatisfactionIndexCtrl__c.field-meta.xml
<CustomField>
    <fullName>SatisfactionIndexCtrl__c</fullName>
    <description>Campo tecnico nascosto. Necessario per calcolo KPI Satisfaction Index.</description>
    <label>Satisfaction Index</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>