force-app/main/default/objects/Account/fields/SendMode__c.field-meta.xml
<CustomField>
    <fullName>SendMode__c</fullName>
    <label>Modalita Invio Doc</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_SendMode</valueSetName>
    </valueSet>
</CustomField>