force-app/main/default/objects/Account/fields/ShippingAddressFormula__c.field-meta.xml
<CustomField>
    <fullName>ShippingAddressFormula__c</fullName>
    <description>Formula che raggruppa i campi principali dell&apos;indirizzo</description>
    <formula>ShippingStreetName__c&amp;&apos; &apos;&amp;ShippingStreetNumber__c
&amp;IF(!ISBLANK(ShippingStreetNumberExtension__c),&apos;/&apos;&amp; ShippingStreetNumberExtension__c,&apos;&apos;)
&amp;IF(!ISBLANK(ShippingPlace__c),&apos;, &apos;&amp; ShippingPlace__c,&apos;&apos;)
&amp;&apos;, &apos;&amp;ShippingCity&amp;&apos; &apos;&amp;ShippingState
&amp;&apos;, &apos;&amp;ShippingPostalCode&amp;&apos; &apos;&amp;ShippingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Indirizzo</label>
    <type>Text</type>
</CustomField>