force-app/main/default/objects/Account/fields/ShippingPlace__c.field-meta.xml
<CustomField>
    <fullName>ShippingPlace__c</fullName>
    <description>Indirizzo Clienti Salvaguardia.</description>
    <label>Località [Salvaguardia]</label>
    <length>50</length>
    <type>Text</type>
</CustomField>