force-app/main/default/objects/Account/fields/ShippingRegion__c.field-meta.xml
<CustomField>
    <fullName>ShippingRegion__c</fullName>
    <description>Secondo indirizzo su account</description>
    <label>Regione</label>
    <length>50</length>
    <type>Text</type>
</CustomField>