force-app/main/default/objects/Account/fields/ShippingStreetName__c.field-meta.xml
<CustomField>
    <fullName>ShippingStreetName__c</fullName>
    <description>Secondo indirizzo su account</description>
    <label>Nome Via</label>
    <length>200</length>
    <type>Text</type>
</CustomField>