force-app/main/default/objects/Account/fields/ShippingStreetNumber__c.field-meta.xml
<CustomField>
    <fullName>ShippingStreetNumber__c</fullName>
    <description>Secondo indirizzo su account</description>
    <label>Civico</label>
    <length>30</length>
    <type>Text</type>
</CustomField>