force-app/main/default/objects/Account/fields/VATGroup__c.field-meta.xml
<CustomField>
    <fullName>VATGroup__c</fullName>
    <description>Gestione Gruppo IVA</description>
    <label>Partita IVA di Gruppo</label>
    <length>30</length>
    <type>Text</type>
</CustomField>