force-app/main/default/objects/Account/fields/VATGroupEndDate__c.field-meta.xml
<CustomField>
    <fullName>VATGroupEndDate__c</fullName>
    <description>Gestione Gruppo IVA</description>
    <label>Data Fine Piva di Gruppo</label>
    <type>Date</type>
</CustomField>