force-app/main/default/objects/Account/fields/VATGroupStartDate__c.field-meta.xml
<CustomField>
    <fullName>VATGroupStartDate__c</fullName>
    <description>Gestione Gruppo IVA</description>
    <label>Data Inizio Piva di Gruppo</label>
    <type>Date</type>
</CustomField>