force-app/main/default/objects/Account/fields/VirtualSAPIban__c.field-meta.xml
<CustomField>
    <fullName>VirtualSAPIban__c</fullName>
    <description>IBAN Virtuale viene calcolato al momento della creazione di un nuovo BP in Sap. Ad oggi viene valorizzato in Siebel dall&apos;allineamento dati Sap-&gt;Siebel notturno.</description>
    <label>IBAN Virtuale</label>
    <length>50</length>
    <type>Text</type>
</CustomField>