force-app/main/default/objects/Account/fields/Vulnerability__c.field-meta.xml
<CustomField>
    <fullName>Vulnerability__c</fullName>
    <label>Vulnerabilità</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_YesNo</valueSetName>
    </valueSet>
</CustomField>