force-app/main/default/objects/Account/fields/VulnerabilityEndDate__c.field-meta.xml
<CustomField>
    <fullName>VulnerabilityEndDate__c</fullName>
    <label>Data Fine Vulnerabilità</label>
    <type>Date</type>
</CustomField>